fix simple warnings like non-static inner classes, dead stores and keySet -> entrySet uses